# RetailForecastAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  config_parser.py  constants.py  db_connector.py  docker-compose.yml  future_scope.md  helpers.py  memory.md  models.py  pyproject.toml  streamlit_app.py  temp1.py  test_edge_cases.py  views.py
.github/workflows/: ci.yml  deploy.yml
api/: dependencies.py  main.py  schemas.py
api/routes/: __init__.py  dashboard.py  forecasts.py  narratives.py  pipeline.py
bq/: __init__.py  client.py
bq/sql/: create_view.sql  evaluate_model.sql  generate_forecast.sql  train_model.sql
config/: logging.py  settings.py
data/business_docs/: rossmann_context.txt
data/reports/: baseline_comparison.md  baseline_metrics.csv
data/sample_sales/: rossmann_sample.csv
db/: __init__.py  models.py  session.py
etl/: __init__.py  beam_pipeline.py  schema.py
frontend/: package-lock.json  package.json
frontend/public/: bye.splinecode  scene.splinecode
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/spline-test/: page.tsx
frontend/src/components/: liquid-glass-card.tsx
frontend/src/components/charts/: bar-chart.tsx  chart-tooltip.tsx  donut-chart.tsx  line-chart.tsx  scatter-chart.tsx
frontend/src/components/dashboard/: about-section.tsx  benchmarks-section.tsx  chart-modal.tsx  compare-section.tsx  dashboard-shell.tsx  insight.tsx  narrative-section.tsx  overview-section.tsx  rag-badge.tsx  sidebar.tsx  store-forecast-section.tsx  store-select.tsx
frontend/src/components/landing/: about.tsx  ambient-background.tsx  contact.tsx  features.tsx  footer.tsx  how-it-works.tsx  results.tsx  spline-scene.tsx  tech-stack.tsx
frontend/src/lib/: api.ts  chart-theme.ts  insights.ts  tiers.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
pipeline/: __init__.py  orchestrator.py
rag/: __init__.py  narrative_chain.py  prompts.py  vector_store.py
scripts/: baseline_compare.py  build_index.py  entrypoint.sh  local_doctor.py  run_bqml.py  seed_data.py  seed_forecasts_local.py  sync_forecasts.py  sync_narratives.py
spark/: __init__.py  feature_engineering.py  spark_eda.ipynb
tests/: conftest.py  test_api.py  test_etl.py  test_local_doctor.py  test_local_forecasting.py  test_rag.py  test_sync_narratives.py
