[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "retailforecastai"
version     = "1.0.0"
description = "Production-grade retail demand forecasting pipeline for RetailForecastAI"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "bq*", "config*", "db*", "etl*", "pipeline*", "rag*", "spark*"]

# ── Dependency groups ──────────────────────────────────────────
[project.optional-dependencies]
base = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
]
etl = [
  "apache-beam[gcp]>=2.55",
  "google-cloud-storage>=2.16",
  "google-cloud-bigquery>=3.19",
  "pyarrow>=15.0",
]
spark = [
  "pyspark>=3.5",
  "pyarrow>=15.0",
]
rag = [
  "langchain>=0.2",
  "langchain-core>=0.2",
  "langchain-community>=0.2",
  "langchain-text-splitters>=0.2",
  "langchain-huggingface>=0.0.3",
  "langchain-groq>=0.1.9",
  "faiss-cpu>=1.7",
  "sentence-transformers>=2.7",
  "pypdf>=4.2",
  "tenacity>=8.3",
]
api = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "httpx>=0.27",
  "tenacity>=8.3",
]
ui = [
  "streamlit>=1.35",
  "plotly>=5.22",
  "requests>=2.31",
]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "anyio>=4.4",
  "aiosqlite>=0.20",
  "ruff>=0.4",
  "mypy>=1.10",
  "types-setuptools",
  "respx>=0.21",
]

# ── Tooling ────────────────────────────────────────────────────
[tool.ruff]
line-length    = 120
target-version = "py312"

[tool.ruff.lint]
select  = ["E", "F", "I", "UP", "B", "SIM", "S"]
ignore  = [
  "E501",   # line too long
  "B905",   # zip without strict
  "S101",   # allow assert in tests
  "S608",   # SQL expression — BigQuery uses @params; false positive for f-string table names
  "S311",   # non-cryptographic random — fine for seed/test data generation
  "S108",   # /tmp in GCS path (gs://bucket/tmp) — not a local temp file
]

[tool.ruff.lint.per-file-ignores]
"scripts/*"      = ["E402"]   # sys.path manipulation must precede project imports
"streamlit_app.py" = ["E402"]

[tool.mypy]
python_version         = "3.12"
strict                 = true
ignore_missing_imports = true

# Apache Beam and LangChain ship no type stubs; disable strict checking there
[[tool.mypy.overrides]]
module = ["etl.*", "pipeline.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["rag.*"]
disallow_untyped_defs   = false
disallow_untyped_calls  = false
warn_unused_ignores     = false
warn_return_any         = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "--cov=. --cov-report=term-missing --cov-fail-under=30"

[tool.coverage.run]
omit = ["tests/*", "migrations/*", "scripts/*"]
